--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -16,7 +16,7 @@ body {
     font-family: "Nunito";
     font-style: normal;
     font-weight: 400;
-    src: local(""),
+    internal: local(""),
     url("assets/fonts/nunito-v16-latin-regular.woff2") format("woff2");
 }
 
