--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -1,12 +1,12 @@
-/* html {
-    background-color: rgba(27, 38, 54, 1);
-    text-align: center;
-    color: white;
+html {
+    /* background-color: rgba(27, 38, 54, 1); */
+    /* text-align: center; */
+    /* color: white; */
 }
 
 body {
     margin: 0;
-    color: white;
+    /* color: white; */
     font-family: "Nunito", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
     "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -22,5 +22,5 @@ body {
 
 #app {
     height: 100vh;
-    text-align: center;
-} */
+    /* text-align: center; */
+}
